tests/toy/neg/000692_mutation.toylang
program a = { a = a program a = { } .; } .
